--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "main": "highcharts-element.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
-    "highcharts": "^6.1.1"
+    "highcharts": "^6.1.1",
+    "paper-button": "PolymerElements/paper-button#^2.1.2"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
